# bathory1

./: README.md  meson.build
include/: convert_from.hpp  convert_to.hpp  format.hpp  identify.hpp
src/: identify.cpp  main.cpp
src/codecs/: convert_from.cpp  convert_to.cpp
